# mission-control-os

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF-2026-04-25.md  MASTER-BUILD-PLAN.md  MISSION-ARCHITECT-HANDOFF.md  README.md  RECONCILIATION_REPORT.md  SKILL.md  WAKE_UP_REPORT.md  current.md  jest.config.js  mission_architect.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
.claude/: launch.json
backend/: __init__.py  main.py
backend/agents/: batman_graph.py  batman_lead.py  decomposer.py  executor.py  jarvis_supervisor.py  reviewers.py  supervisor.py  tool_wrapper.py  wakanda_supervisor.py
backend/api/: __init__.py  routes.py  schemas.py
backend/db/: __init__.py  models.py  session.py
backend/models/: __init__.py  mission.py
backend/services/: __init__.py  abac_enforcer.py  audit_service.py  cost_alert_service.py  cost_service.py  execution_service.py  memory_isolation.py  memory_service.py  mission_service.py  role_registry.py  tool_service.py
db/: __init__.py  schema.sql
docs/: ARCHITECTURE.md  FRACTAL_MEMORY_INTEGRATION.md  PHASE1_SKELETON_MAPPING.md  PHASE_2_ACCEPTANCE_CRITERIA.md  PHASE_2_FRACTAL_MEMORY_CONSOLIDATION_PLAN.md  PHASE_2_STAGE_A_MEMORY_TOOL_INVENTORY.md  PHASE_2_STAGE_F_RETRIEVAL_GATE_SPEC.md  PHASE_2_STAGE_G_EVAL_MATRIX_SPEC.md  PHASE_2_STAGE_G_EVAL_REPORT.md  SPEC_PHASE1_BATMAN_MVP.md  SPEC_PHASE3_WAKANDA.md
tests/: __init__.py  conftest.py
ui/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
(+95 files in other folders)
